--- a/Fake_News_Detection.ipynb
+++ b/Fake_News_Detection.ipynb
@@ -193,6 +193,232 @@
     {
       "cell_type": "code",
       "source": [
+        "print(\"Total samples:\", len(df))\n",
+        "print(\"\\nClass distribution:\")\n",
+        "print(df[\"label\"].value_counts())\n",
+        "print(\"\\nClass distribution (%):\")\n",
+        "print(df[\"label\"].value_counts(normalize=True) * 100)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "qKM-qNlgq277",
+        "outputId": "15efdf1c-8562-454e-d15c-dcb4fcc762a2"
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Total samples: 44898\n",
+            "\n",
+            "Class distribution:\n",
+            "label\n",
+            "fake    23481\n",
+            "real    21417\n",
+            "Name: count, dtype: int64\n",
+            "\n",
+            "Class distribution (%):\n",
+            "label\n",
+            "fake    52.298543\n",
+            "real    47.701457\n",
+            "Name: proportion, dtype: float64\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df[\"char_length\"] = df[\"text\"].astype(str).apply(len)\n",
+        "\n",
+        "df.groupby(\"label\")[\"char_length\"].describe()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 143
+        },
+        "id": "CtAizpcVq6df",
+        "outputId": "ed89dbd0-6767-413a-e2a4-7516bb94af26"
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "         count         mean          std  min     25%     50%     75%      max\n",
+              "label                                                                         \n",
+              "fake   23481.0  2547.396235  2532.884399  1.0  1433.0  2166.0  3032.0  51794.0\n",
+              "real   21417.0  2383.278517  1684.835730  1.0   914.0  2222.0  3237.0  29781.0"
+            ],
+            "text/html": [
+              "\n",
+              "  <div id=\"df-b64deb5b-a6a3-4f16-8492-4ef987260036\" class=\"colab-df-container\">\n",
+              "    <div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>count</th>\n",
+              "      <th>mean</th>\n",
+              "      <th>std</th>\n",
+              "      <th>min</th>\n",
+              "      <th>25%</th>\n",
+              "      <th>50%</th>\n",
+              "      <th>75%</th>\n",
+              "      <th>max</th>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>label</th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>fake</th>\n",
+              "      <td>23481.0</td>\n",
+              "      <td>2547.396235</td>\n",
+              "      <td>2532.884399</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>1433.0</td>\n",
+              "      <td>2166.0</td>\n",
+              "      <td>3032.0</td>\n",
+              "      <td>51794.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>real</th>\n",
+              "      <td>21417.0</td>\n",
+              "      <td>2383.278517</td>\n",
+              "      <td>1684.835730</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>914.0</td>\n",
+              "      <td>2222.0</td>\n",
+              "      <td>3237.0</td>\n",
+              "      <td>29781.0</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>\n",
+              "    <div class=\"colab-df-buttons\">\n",
+              "\n",
+              "  <div class=\"colab-df-container\">\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-b64deb5b-a6a3-4f16-8492-4ef987260036')\"\n",
+              "            title=\"Convert this dataframe to an interactive table.\"\n",
+              "            style=\"display:none;\">\n",
+              "\n",
+              "  <svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\" viewBox=\"0 -960 960 960\">\n",
+              "    <path d=\"M120-120v-720h720v720H120Zm60-500h600v-160H180v160Zm220 220h160v-160H400v160Zm0 220h160v-160H400v160ZM180-400h160v-160H180v160Zm440 0h160v-160H620v160ZM180-180h160v-160H180v160Zm440 0h160v-160H620v160Z\"/>\n",
+              "  </svg>\n",
+              "    </button>\n",
+              "\n",
+              "  <style>\n",
+              "    .colab-df-container {\n",
+              "      display:flex;\n",
+              "      gap: 12px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert {\n",
+              "      background-color: #E8F0FE;\n",
+              "      border: none;\n",
+              "      border-radius: 50%;\n",
+              "      cursor: pointer;\n",
+              "      display: none;\n",
+              "      fill: #1967D2;\n",
+              "      height: 32px;\n",
+              "      padding: 0 0 0 0;\n",
+              "      width: 32px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert:hover {\n",
+              "      background-color: #E2EBFA;\n",
+              "      box-shadow: 0px 1px 2px rgba(60, 64, 67, 0.3), 0px 1px 3px 1px rgba(60, 64, 67, 0.15);\n",
+              "      fill: #174EA6;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-buttons div {\n",
+              "      margin-bottom: 4px;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert {\n",
+              "      background-color: #3B4455;\n",
+              "      fill: #D2E3FC;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert:hover {\n",
+              "      background-color: #434B5C;\n",
+              "      box-shadow: 0px 1px 3px 1px rgba(0, 0, 0, 0.15);\n",
+              "      filter: drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.3));\n",
+              "      fill: #FFFFFF;\n",
+              "    }\n",
+              "  </style>\n",
+              "\n",
+              "    <script>\n",
+              "      const buttonEl =\n",
+              "        document.querySelector('#df-b64deb5b-a6a3-4f16-8492-4ef987260036 button.colab-df-convert');\n",
+              "      buttonEl.style.display =\n",
+              "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
+              "\n",
+              "      async function convertToInteractive(key) {\n",
+              "        const element = document.querySelector('#df-b64deb5b-a6a3-4f16-8492-4ef987260036');\n",
+              "        const dataTable =\n",
+              "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
+              "                                                    [key], {});\n",
+              "        if (!dataTable) return;\n",
+              "\n",
+              "        const docLinkHtml = 'Like what you see? Visit the ' +\n",
+              "          '<a target=\"_blank\" href=https://colab.research.google.com/notebooks/data_table.ipynb>data table notebook</a>'\n",
+              "          + ' to learn more about interactive tables.';\n",
+              "        element.innerHTML = '';\n",
+              "        dataTable['output_type'] = 'display_data';\n",
+              "        await google.colab.output.renderOutput(dataTable, element);\n",
+              "        const docLink = document.createElement('div');\n",
+              "        docLink.innerHTML = docLinkHtml;\n",
+              "        element.appendChild(docLink);\n",
+              "      }\n",
+              "    </script>\n",
+              "  </div>\n",
+              "\n",
+              "\n",
+              "    </div>\n",
+              "  </div>\n"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "dataframe",
+              "summary": "{\n  \"name\": \"df\",\n  \"rows\": 2,\n  \"fields\": [\n    {\n      \"column\": \"label\",\n      \"properties\": {\n        \"dtype\": \"string\",\n        \"num_unique_values\": 2,\n        \"samples\": [\n          \"real\",\n          \"fake\"\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"count\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 1459.468396369034,\n        \"min\": 21417.0,\n        \"max\": 23481.0,\n        \"num_unique_values\": 2,\n        \"samples\": [\n          21417.0,\n          23481.0\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"mean\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 116.04875144370581,\n        \"min\": 2383.278517065882,\n        \"max\": 2547.396235254035,\n        \"num_unique_values\": 2,\n        \"samples\": [\n          2383.278517065882,\n          2547.396235254035\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"std\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 599.6609645371803,\n        \"min\": 1684.8357303747111,\n        \"max\": 2532.8843992489233,\n        \"num_unique_values\": 2,\n        \"samples\": [\n          1684.8357303747111,\n          2532.8843992489233\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"min\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 0.0,\n        \"min\": 1.0,\n        \"max\": 1.0,\n        \"num_unique_values\": 1,\n        \"samples\": [\n          1.0\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"25%\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 366.9884194358182,\n        \"min\": 914.0,\n        \"max\": 1433.0,\n        \"num_unique_values\": 2,\n        \"samples\": [\n          914.0\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"50%\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 39.59797974644666,\n        \"min\": 2166.0,\n        \"max\": 2222.0,\n        \"num_unique_values\": 2,\n        \"samples\": [\n          2222.0\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"75%\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 144.95689014324225,\n        \"min\": 3032.0,\n        \"max\": 3237.0,\n        \"num_unique_values\": 2,\n        \"samples\": [\n          3237.0\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"max\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 15565.54157425947,\n        \"min\": 29781.0,\n        \"max\": 51794.0,\n        \"num_unique_values\": 2,\n        \"samples\": [\n          29781.0\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    }\n  ]\n}"
+            }
+          },
+          "metadata": {},
+          "execution_count": 8
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "df[\"text\"] = df[\"title\"].astype(str) + \" \" + df[\"text\"].astype(str)"
       ],
       "metadata": {
